# MarkeTracking

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260408_0001_initial_schema.py
src/marketracking/: main.py
src/marketracking/api/: __init__.py  router.py  routes_health.py
src/marketracking/core/: config.py
src/marketracking/db/: models.py  session.py
src/marketracking/parsers/: __init__.py
src/marketracking/parsers/sources/: __init__.py  base.py
src/marketracking/schemas/: __init__.py
src/marketracking/services/: __init__.py  nfce_service.py  qr_service.py  storage_service.py
src/marketracking/static/css/: app.css
src/marketracking/templates/: about.html  base.html  index.html
src/marketracking/web/: __init__.py  routes.py
src/marketracking/workers/: __init__.py  runner.py
tests/unit/: test_health.py
